--- a/mall-tiny-swagger/src/main/resources/application.yml
+++ b/mall-tiny-swagger/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/db_mall_tiny?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: 123456
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
