--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
     <modules>
         <module>mall-tiny-01</module>
         <module>mall-tiny-swagger</module>
-        <module>mall-tiny-02</module>
         <module>mall-tiny-03</module>
         <module>mall-tiny-02</module>
+        <module>mall-tiny-redis</module>
     </modules>
 
     <properties>
