--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>mall-tiny-03</module>
         <module>mall-tiny-02</module>
         <module>mall-tiny-redis</module>
+        <module>mall-tiny-04</module>
     </modules>
 
     <properties>
