添加了mall-tiny-05模块的代码, 关于mall整合Elasticsearch实现商品搜索的内容

--- a/mall-tiny-05/src/main/resources/application.yml
+++ b/mall-tiny-05/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8088
+  port: 8080
 
 spring:
   datasource:
@@ -7,7 +7,7 @@ spring:
     username: root
     password: 123456
   mvc:
-    pathmatch:
+    path match:
       matching-strategy: ANT_PATH_MATCHER
   redis:
     host: localhost # Redis服务器地址
@@ -30,6 +30,7 @@ spring:
 mybatis:
   mapper-locations:
     - classpath:dao/*.xml
+#    - classpath*:com/**/mapper/*.xml
     - classpath*:/mapper/**/*.xml
 
 # 自定义redis key
