--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>mall-tiny-02</module>
         <module>mall-tiny-redis</module>
         <module>mall-tiny-04</module>
+        <module>mall-tiny-05</module>
     </modules>
 
     <properties>
