添加了mall-tiny-rabbit模块的代码, 关于学习RabbitMQ的内容

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>mall-tiny-05</module>
         <module>mall-tiny-06</module>
         <module>mall-tiny-06</module>
+        <module>mall-tiny-rabbit</module>
     </modules>
 
     <properties>
