添加了mall-tiny-07模块的代码, 关于mall整合RabbitMQ实现延迟消息的内容

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>mall-tiny-06</module>
         <module>mall-tiny-06</module>
         <module>mall-tiny-rabbit</module>
+        <module>mall-tiny-07</module>
     </modules>
 
     <properties>
