添加了mall-tiny-08模块的代码, 关于mall整合MinIO实现文件上传的内容

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>mall-tiny-06</module>
         <module>mall-tiny-rabbit</module>
         <module>mall-tiny-07</module>
+        <module>mall-tiny-08</module>
     </modules>
 
     <properties>
